--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
+    "dotenv": "^16.0.3",
+    "mysql2": "^3.2.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
