--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chainlink/contracts": "^0.6.1",
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
     "@web3modal/ethereum": "^2.2.2",
     "@web3modal/react": "^2.2.2",
     "axios": "^1.3.4",
+    "bn.js": "^5.2.1",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "mysql2": "^3.2.0",
